Update build.gradle.kts for testing and packaging

--- a/tooling/vs-code/package.json
+++ b/tooling/vs-code/package.json
@@ -55,13 +55,14 @@
   },
   "scripts": {
     "package": "npm run check-types && node esbuild.js --production",
-    "package:vsix": "rimraf ./dist && npm run package && vsce package --no-dependencies --out dist/vscode-kson-plugin.vsix",
+    "packagePlugin": "rimraf ./dist && npm run package && vsce package --no-dependencies --out dist/vscode-kson-plugin.vsix",
     "compile": "npm run check-types && node esbuild.js",
     "compile-tests": "node esbuild.js --tests",
     "check-types": "tsc --noEmit",
     "vscode": "npm run package:vsix && tsx test/runExtension.ts",
-    "test": "npm run compile-tests && RUN_MODE=test-node node dist/runTests.js",
-    "test:browser": "npm run compile-tests && RUN_MODE=test-browser node dist/runTests.js"
+    "testDesktop": "npm run compile-tests && RUN_MODE=test-node node dist/runTests.js",
+    "testBrowser": "npm run compile-tests && RUN_MODE=test-browser node dist/runTests.js",
+    "testPlugin": "npm run testDesktop && npm run testBrowser"
   },
   "dependencies": {
     "kson-language-server": "file:../language-server-protocol",
