--- a/tooling/lsp-extensions/vscode/package.json
+++ b/tooling/lsp-extensions/vscode/package.json
@@ -56,13 +56,13 @@
   "scripts": {
     "package": "npm run check-types && node esbuild.js --production",
     "packagePlugin": "rimraf ./dist && npm run package && vsce package --no-dependencies --out dist/vscode-kson-plugin.vsix",
-    "compile": "npm run check-types && node esbuild.js",
+    "compile": "npm run check-types && node esbuild.js --tests",
     "compile-tests": "node esbuild.js --tests",
     "check-types": "tsc --noEmit",
-    "vscode": "npm run package:vsix && tsx test/runExtension.ts",
+    "vscode": "npm run packagePlugin && tsx test/runExtension.ts",
     "testDesktop": "npm run compile-tests && RUN_MODE=test-node node dist/runTests.js",
     "testBrowser": "npm run compile-tests && RUN_MODE=test-browser node dist/runTests.js",
-    "testPlugin": "npm run testDesktop && npm run testBrowser"
+    "test": "npm run testDesktop && npm run testBrowser"
   },
   "dependencies": {
     "@kson/lsp-shared": "file:../shared",
