Reduce code duplication between LSP clients
Starting up the browser server is done both by the monaco client and the
vscode client.
Also the textmate and language configuration files are shared. This
commit refactors to de-duplicate.

--- a/tooling/lsp-extensions/monaco/package.json
+++ b/tooling/lsp-extensions/monaco/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.3",
-    "kson-language-server": "file:../language-server-protocol",
+    "@kson/lsp-shared": "file:../shared",
     "monaco-editor-wrapper": "^6.9.0",
     "vscode-languageserver": "^9.0.1"
   },
