--- a/tooling/lsp-extensions/vscode/package.json
+++ b/tooling/lsp-extensions/vscode/package.json
@@ -32,17 +32,17 @@
           ".kson"
         ],
         "icon": {
-          "light": "./extension/assets/kson-icon.png",
-          "dark": "./extension/assets/kson-icon.png"
+          "light": "./dist/extension/assets/kson-icon.png",
+          "dark": "./dist/extension/assets/kson-icon.png"
         },
-        "configuration": "./extension/config/language-configuration.json"
+        "configuration": "./dist/extension/config/language-configuration.json"
       }
     ],
     "grammars": [
       {
         "language": "kson",
         "scopeName": "source.kson",
-        "path": "./extension/config/kson.tmLanguage.json"
+        "path": "./dist/extension/config/kson.tmLanguage.json"
       }
     ],
     "configuration": {
@@ -65,7 +65,8 @@
     "testPlugin": "npm run testDesktop && npm run testBrowser"
   },
   "dependencies": {
-    "kson-language-server": "file:../language-server-protocol",
+    "@kson/lsp-shared": "file:../shared",
+    "kson-language-server": "file:../../language-server-protocol",
     "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1"
   },
