--- a/tooling/lsp-clients/vscode/package.json
+++ b/tooling/lsp-clients/vscode/package.json
@@ -86,5 +86,10 @@
     "tsx": "^4.20.3",
     "typescript": "^5.5.4",
     "uuid": "^9.0.1"
-  }
+  },
+  "files": [
+    "LICENSE",
+    "readme.md",
+    "dist/**"
+  ]
 }
