--- a/tooling/lsp-clients/monaco/package.json
+++ b/tooling/lsp-clients/monaco/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test",
+    "test:headed": "playwright test --headed"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "vscode-languageserver": "^9.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.2",
     "vite": "^7.0.2"
   }
 }
