--- a/tooling/lsp-clients/package.json
+++ b/tooling/lsp-clients/package.json
@@ -10,11 +10,11 @@
   ],
   "scripts": {
     "buildPlugins": "npm run compile && npm run build -w monaco && npm run packagePlugin -w vscode",
-    "compile": "npm run compile -w shared && npm run compile -w vscode && npm run build -w monaco",
+    "compile": "npm run compile -w shared && npm run compile -w vscode",
     "clean": "npm run clean --workspaces --if-present",
     "test": "npm run compile && npm run test --workspaces --if-present",
     "vscode": "npm run compile && npm run vscode -w vscode",
-    "monaco": "npm run compile && npm run dev -w monaco"
+    "monaco": "npm run dev -w monaco"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
