--- a/tooling/lsp-clients/vscode/package.json
+++ b/tooling/lsp-clients/vscode/package.json
@@ -46,7 +46,33 @@
       }
     ],
     "configuration": {
-      "title": "Kson"
+      "title": "Kson",
+      "properties": {
+        "kson.format.tabSize": {
+          "type": "number",
+          "default": 2,
+          "minimum": 1,
+          "description": "Number of spaces for indentation"
+        },
+        "kson.format.insertSpaces": {
+          "type": "boolean",
+          "default": true,
+          "description": "Use spaces instead of tabs for indentation"
+        },
+        "kson.format.formattingStyle": {
+          "type": "string",
+          "enum": [
+            "plain",
+            "delimited"
+          ],
+          "enumDescriptions": [
+            "Plain formatting with minimal delimiters",
+            "Delimited formatting"
+          ],
+          "default": "plain",
+          "description": "Formatting style for Kson documents"
+        }
+      }
     }
   },
   "engines": {
