Add dynamic configuration for LSP
Add the possibility to dynamically configure the LSP server. Currently
we only have settings for formatting.

To update the configuration we use a deprecated settings, that made the
code easier to write. I haven't run into issues, but if so we need to
update that setting.

--- a/tooling/lsp-clients/vscode/package.json
+++ b/tooling/lsp-clients/vscode/package.json
@@ -46,7 +46,20 @@
       }
     ],
     "configuration": {
-      "title": "Kson"
+      "title": "Kson",
+      "properties": {
+        "kson.format.tabSize": {
+          "type": "number",
+          "default": 2,
+          "minimum": 1,
+          "description": "Number of spaces for indentation"
+        },
+        "kson.format.insertSpaces": {
+          "type": "boolean",
+          "default": true,
+          "description": "Use spaces instead of tabs for indentation"
+        }
+      }
     }
   },
   "engines": {
