--- a/tooling/lsp-clients/vscode/package.json
+++ b/tooling/lsp-clients/vscode/package.json
@@ -80,10 +80,10 @@
     "node": "^20.18.1"
   },
   "scripts": {
-    "package": "npm run check-types && node esbuild.js --production",
+    "package": "npm run check-types && tsx esbuild.ts --production",
     "packagePlugin": "rimraf ./dist && npm run package && vsce package --no-dependencies --out dist/vscode-kson-plugin.vsix",
-    "compile": "npm run check-types && node esbuild.js --tests",
-    "compile-tests": "node esbuild.js --tests",
+    "compile": "npm run check-types && tsx esbuild.ts --tests",
+    "compile-tests": "tsx esbuild.ts --tests",
     "check-types": "tsc --noEmit",
     "vscode": "npm run packagePlugin && tsx test/runExtension.ts",
     "testDesktop": "npm run compile-tests && RUN_MODE=test-node node dist/runTests.js",
