Don't run Monaco Plugin Build
The 'check' task depended on `npm_run_buildPlugins` which builds both
the Monaco and VS Code plugin.
Monaco is build with Vite, which on CircleCI, runs very slowly and
resulted in OOM-errors. In 8104127d I solved this by splitting up the
circleCI tasks.
However, the long build time is quite annoying still, since
nothing depends on Monaco building we take this out off the build and
revert the changes in 8104127d.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,14 +70,7 @@ jobs:
 
       - run:
           name: Verify Kson project
-          # This check excludes `:tooling:lsp-clients:check` since that consistently resulted
-          # in OOM-errors during the vite build.
-          command: ./gradlew -x :tooling:lsp-clients:check check
-
-      - run:
-          name: Verify Kson tooling
-          # This check is run separately and without daemon to prevent OOM-errors during the vite build in Monaco
-          command: ./gradlew :tooling:lsp-clients:check --no-daemon
+          command: ./gradlew check
 
       - save_cache:
           paths:
