Add Intellij Annotator for syntax highlighting
Our IntelliJ plugin only provided syntax highlighting based off the
`Lexer`. However, in that way we couldn't distinguish between strings
and object keys, since that information only becomes available after the
document is parsed. By implementing an `Annotator` we are able to easily
separate strings from object keys.

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -45,5 +45,7 @@
         <enterHandlerDelegate implementation="org.kson.jetbrains.editor.KsonEnterHandlerDelegate"/>
         <lang.foldingBuilder language="kson"
                              implementationClass="org.kson.jetbrains.folding.KsonFoldingBuilder"/>
+        <annotator language="kson"
+                   implementationClass="org.kson.jetbrains.highlighter.KsonAnnotator"/>
     </extensions>
 </idea-plugin>
