--- a/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
+++ b/tooling/jetbrains/src/main/resources/messages/KsonBundle.properties
@@ -15,3 +15,4 @@ kson.syntaxHighlighter.keyword=Keyword
 kson.syntaxHighlighter.invalid=Invalid
 kson.syntaxHighlighter.number=Number
 kson.syntaxHighlighter.content=Content
+kson.syntaxHighlighter.key=Key
