Pure refactor: rename KsonAnnotator
We're planning to add more annotators, so rename `KsonAnnotator` to the
more expressive `KsonSemanticHighlightAnnotator`

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -46,6 +46,6 @@
         <lang.foldingBuilder language="kson"
                              implementationClass="org.kson.jetbrains.folding.KsonFoldingBuilder"/>
         <annotator language="kson"
-                   implementationClass="org.kson.jetbrains.highlighter.KsonAnnotator"/>
+                   implementationClass="org.kson.jetbrains.highlighter.KsonSemanticHighlightAnnotator"/>
     </extensions>
 </idea-plugin>
