--- a/tooling/lsp-clients/package.json
+++ b/tooling/lsp-clients/package.json
@@ -16,7 +16,7 @@
     "clean": "npm run clean --workspaces --if-present",
     "test": "npm run compile && npm run test --workspaces --if-present",
     "vscode": "npm run compile && npm run vscode -w vscode",
-    "monaco": "npm run dev -w monaco"
+    "monaco": "npm run compile && npm run dev -w monaco"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
