Create python bindings for lib-kotlin
This commit introduces lib-python, which provides bindings for kson's
public API (i.e. lib-kotlin).

The bindings were automatically generated using the incomplete work from
[this PR](https://github.com/kson-org/kson/pull/115), and then slightly
tweaked. We are planning to improve them in the future using LLMs
instead of relying on a deterministic bindings generator.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ jobs:
           keys:
             - v1-vscode-tests
 
+      # Install `uv` (necessary for testing the bindings)
+      - run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
       # installed needed native dependency on Linux
       - run: sudo apt update
       - run: sudo apt install libncurses-dev
