Hook all Kson errors into Jetbrains IDEs
Jetbrains IDEs now now delegate _all_ Kson validation annotation
generation down to the official Kson parser through the new
`KsonValidationAnnotator`.

This means that we now surface post-parse validations that
were not previously surfaced in Jetbrains IDEs (particularly, both
the new Indent validations nor the json schema validations we
inaccessible), and going forward all new validations added to Kson will
be automatically surfaced through this Annotator, just like for our
LSP clients.

Co-authored-by: Daniel Marcotte <daniel@marcottemotors.io>

--- a/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/tooling/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -47,5 +47,7 @@
                              implementationClass="org.kson.jetbrains.folding.KsonFoldingBuilder"/>
         <annotator language="kson"
                    implementationClass="org.kson.jetbrains.highlighter.KsonSemanticHighlightAnnotator"/>
+        <externalAnnotator language="kson"
+                           implementationClass="org.kson.jetbrains.parser.KsonValidationAnnotator"/>
     </extensions>
 </idea-plugin>
