--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "cffi>=1.17.1",
 ]
 
+[tool.setuptools.package-data]
+kson = ["kson_api.h", "kson.dll", "kson.dylib", "libkson.so"]
+
 [dependency-groups]
 dev = [
     "pyright>=1.1.403",
