Add gradle tasks for lib-rust and make static linking the default
Note: on Windows, dynamic linking will always be used

--- a/lib-rust/Cargo.toml
+++ b/lib-rust/Cargo.toml
@@ -3,7 +3,14 @@ name = "kson"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[features]
+default = []
+dynamic-linking = ["dep:libloading"]
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+libloading = { version = "0.8.8", optional = true }
+
+[target.'cfg(target_os = "windows")'.dependencies]
 libloading = "0.8.8"
 
 [build-dependencies]
