--- a/lib-rust/kson/Cargo.toml
+++ b/lib-rust/kson/Cargo.toml
@@ -5,16 +5,16 @@ edition = "2024"
 
 [features]
 default = []
-dynamic-linking = ["dep:libloading"]
+dynamic-linking = ["kson-sys/dynamic-linking", "dep:libloading"]
+
+[dependencies]
+kson-sys = { version = "0.1.0", path = "../kson-sys" }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 libloading = { version = "0.8.8", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 libloading = "0.8.8"
-
-[build-dependencies]
-bindgen = "0.71.0"
 
 [dev-dependencies]
 insta = "1.43.1"
