Don't use daemon for windows build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           keys:
             - v1-win-amd64-vscode-tests
 
-      - run: ./gradlew dependencies
+      - run: ./gradlew --no-daemon dependencies
 
       - save_cache:
           paths:
@@ -51,11 +51,11 @@ jobs:
           name: Verify `buildSrc/` project
           command: |
             cd buildSrc
-            ./gradlew check
+            ./gradlew --no-daemon check
 
       - run:
           name: Verify Kson project
-          command: ./gradlew check
+          command: ./gradlew --no-daemon check
 
       - save_cache:
           paths:
@@ -116,7 +116,7 @@ jobs:
           name: Get rid of erroneous git config
           command: |
             rm -rf ~/.gitconfig
-      - run: ./gradlew dependencies
+      - run: ./gradlew --no-daemon dependencies
 
       - save_cache:
           paths:
@@ -127,11 +127,11 @@ jobs:
           name: Verify `buildSrc/` project
           command: |
             cd buildSrc
-            ./gradlew check
+            ./gradlew --no-daemon check
 
       - run:
           name: Verify Kson project
-          command: ./gradlew check
+          command: ./gradlew --no-daemon check
 
       - save_cache:
           paths:
