Allow builds from source distribution
This is a first step to creating wheels for platforms. The first
priority is that each platform can built the kson library from source.
In the `build.gradle.kts` we add a task that copies the necessary files
to a directory (instead of just cloning everything). The `MANIFEST.in`
specifies which files to include in the dist (maybe this is double since
we are detailed about what to include in kson-sdist.
Copying and creating the dist zip file is possible with
`./gradlew :lib-python:createSdistBuildEnvironment`.

The custom `build_backend.py`  Will move into that dist, run the gradlew
task necessary to create the bindings and copies the bindings and the
artifacts into the kson library.

The build directory becomes pretty large so this is removed as last step
in the build-backend.py

--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -1,3 +1,8 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "build_backend"
+backend-path = ["."]
+
 [project]
 name = "kson"
 version = "0.1.2.dev0"
@@ -7,6 +12,10 @@ requires-python = ">=3.10"
 dependencies = [
     "cffi>=1.17.1",
 ]
+
+[tool.setuptools]
+packages = ["kson"]
+package-dir = {"" = "src"}
 
 [tool.setuptools.package-data]
 kson = ["kson_api.h", "kson.dll", "libkson.dylib", "libkson.so"]
