--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,122 +8,39 @@ orbs:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build-windows-amd64:
-    resource_class: 'windows.large'
-    machine:
-      image: 'windows-server-2022-gui:current'
-      shell: 'powershell.exe -ExecutionPolicy Bypass'
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-    steps:
-      - checkout
-      - run:
-          name: Get rid of erroneous git config
-          command: |
-            Remove-Item -Path "$env:USERPROFILE\.gitconfig" -Force -ErrorAction SilentlyContinue
-
-      # The `browser-tools` orb doesn't support windows, so we install Chrome manually
-      - run: choco install googlechrome --ignore-checksums
-      # We would ideally install libclang through pixi, but after _hours_ of fiddling we
-      # couldn't make the CI happy and decided to add it here instead
-      - run: choco install llvm
-      - restore_cache:
-          keys:
-            - v1-win-amd64-dependencies-{{ checksum "build.gradle.kts" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-win-amd64-dependencies-
-
-      - restore_cache:
-          keys:
-            - v1-win-amd64-jdk-{{ checksum "jdk.properties" }}
-
-      - restore_cache:
-          keys:
-            - v1-win-amd64-vscode-tests
-
-      - run: ./gradlew --no-daemon dependencies
-
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: v1-win-amd64-dependencies-{{ checksum "build.gradle.kts" }}
-
-      - run:
-          name: Verify `buildSrc/` project
-          command: |
-            cd buildSrc
-            ./gradlew --no-daemon check
-
-      - run:
-          name: Verify Kson project
-          command: ./gradlew --no-daemon check
-
-      - save_cache:
-          paths:
-            - ./tooling/lsp-clients/vscode/.vscode-test
-            - ./tooling/lsp-clients/vscode/.vscode-test-web
-          key: v1-win-amd64-vscode-tests
-
-      - save_cache:
-          paths:
-            - ./gradle/jdk
-            - ./buildSrc/gradle/jdk
-          key: v1-win-amd64-jdk-{{ checksum "jdk.properties" }}
-
-  build-linux-amd64:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      # Choose the `node:lts-browsers` image so that we can install Chrome for testing.  Note that we
-      # do not install a JDK image so that we are always exercising the project's built-in JDK (see jdk.properties for details)
-      - image: cimg/node:lts-browsers
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: cimg/postgres:9.4
-
+  build-macos-arm64:
+    macos:
+      xcode: 16.4.0
+    resource_class: m4pro.medium
     working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      # Install Chrome according to https://circleci.com/developer/orbs/orb/circleci/browser-tools#usage-install_chrome
-      - browser-tools/install-chrome
+      - run: brew install --cask google-chrome
       - checkout
-      - run: google-chrome --version
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "build.gradle.kts" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - restore_cache:
-          keys:
-            - v1-jdk-{{ checksum "jdk.properties" }}
-
-      - restore_cache:
-          keys:
-            - v1-vscode-tests
-
-      # installed needed native dependency on Linux
-      - run: sudo apt update
-      - run: sudo apt install libncurses-dev
+      - run: '"/Applications/Google Chrome.app/Contents/MacOS/Google Chrome" --version'
       - run:
           name: Get rid of erroneous git config
           command: |
             rm -rf ~/.gitconfig
+      - restore_cache:
+          keys:
+            - v1-macos-dependencies-{{ checksum "build.gradle.kts" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-macos-dependencies-
+
+      - restore_cache:
+          keys:
+            - v1-macos-jdk-{{ checksum "jdk.properties" }}
+
+      - restore_cache:
+          keys:
+            - v1-macos-vscode-tests
+
       - run: ./gradlew --no-daemon dependencies
 
       - save_cache:
           paths:
             - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle.kts" }}
+          key: v1-macos-dependencies-{{ checksum "build.gradle.kts" }}
 
       - run:
           name: Verify `buildSrc/` project
@@ -139,19 +56,15 @@ jobs:
           paths:
             - ./tooling/lsp-clients/vscode/.vscode-test
             - ./tooling/lsp-clients/vscode/.vscode-test-web
-          key: v1-vscode-tests
+          key: v1-macos-vscode-tests
 
       - save_cache:
           paths:
             - ./gradle/jdk
             - ./buildSrc/gradle/jdk
-          key: v1-jdk-{{ checksum "jdk.properties" }}
-
-    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
-    resource_class: large
+          key: v1-macos-jdk-{{ checksum "jdk.properties" }}
 
 workflows:
   build-all:
     jobs:
-      - build-linux-amd64
-      - build-windows-amd64
+      - build-macos-arm64
