Prepare for python release
Update pyproject.toml and add a License.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,7 +262,7 @@ jobs:
           name: Verify sdist was created
           command: |
             ls -la lib-python/dist/
-            test -f lib-python/dist/ksonpy-*.tar.gz
+            test -f lib-python/dist/kson_py-*.tar.gz
       - persist_to_workspace:
           root: ~/repo
           paths:
@@ -287,7 +287,7 @@ jobs:
       - run:
           name: Install kson from sdist
           command: |
-            python3 -m pip install lib-python/dist/ksonpy-*.tar.gz
+            python3 -m pip install lib-python/dist/kson_py-*.tar.gz
       - run:
           name: Install test dependencies
           command: |
@@ -319,7 +319,7 @@ jobs:
       - run:
           name: Install kson from sdist
           command: |
-            python3 -m pip install lib-python/dist/ksonpy-*.tar.gz
+            python3 -m pip install lib-python/dist/kson_py-*.tar.gz
       - run:
           name: Install test dependencies
           command: |
@@ -358,7 +358,7 @@ jobs:
       - run:
           name: Install kson from sdist
           command: |
-            python -m pip install (Get-ChildItem lib-python/dist/ksonpy-*.tar.gz).FullName
+            python -m pip install (Get-ChildItem lib-python/dist/kson_py-*.tar.gz).FullName
           shell: powershell.exe
       - run:
           name: Install test dependencies
